# hold-your-fire

./: .gitignore  Makefile  README.md  localguard-research-plan.md  mech-inter-research-plan.md  pyproject.toml  pyrightconfig.json
assets/: geometry_data.json  make_benchmark_svg.py  make_geometry_svg.py  make_overview_svg.py  make_pipeline_svg.py  make_scatter_svg.py  scale_scatter.json
configs/: mini_swe_ollama_qwen25_14b.yaml  mini_swe_ollama_qwen25_7b.yaml  offline_full.yaml  offline_small.yaml  online_evidence_gate.yaml  online_loop_guard.yaml  online_rollback.yaml  online_shadow.yaml
mech_interp/: MLX_STEERING.md  PROGRESS.md  README.md  RECOVERY_DIRECTION.md  RESULTS.md  agent_env.py  capture_scale_coords.py  harder_tasks.py  interpret_recovery.py  lcb_correctness.py  lcb_data.py  lcb_env.py  lcb_intervene.py  lcb_passk.py  lcb_select.py  lcb_solidify.py  lcb_verify_auc.py  lcb_verify_select.py  mlx_wrapper.py  model_wrapper.py  plots.py  recovery_capable.py  recovery_contexts.py  recovery_lcb.py  recovery_onpolicy.py  run_circuit.py  run_disentangle.py  run_frontier.py  run_interventions.py  run_localize.py  run_localize2.py  run_localize_scale.py  run_mlx_steer.py  run_mvp.py  run_onpolicy.py  run_outcome.py  run_outcome_ollama.py  run_real_loops.py  run_recovery_direction.py  run_sample_escape.py  (+3 more)
paper/: body.tex  experiment_log.md  main.bbl  main.tex  md2tex.py  outline.md  paper_draft.md  refs.bib  related_work.md  results.md  results_offline_full.md
scripts/: _bootstrap.py  audit_prefixes.py  build_audit_sample.py  build_features_v2.py  evaluate_v2.py  (+27 more)
(+139 files in other folders)
