[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localguard-swe"
version = "0.1.0"
description = "LocalGuard-SWE: disruption-aware failure monitoring for local open-source coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "LocalGuard-SWE" }]
dependencies = [
    "datasets>=2.18",
    "pandas>=2.0",
    "pyarrow>=14",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pydantic>=2.5",
    "typer>=0.9",
    "rich>=13.0",
    "tqdm>=4.65",
    "joblib>=1.3",
    "ollama>=0.3",
    "openai>=1.0",
    "pyyaml>=6.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
# Online experiments use mini-SWE-agent + LiteLLM (heavier; optional).
online = [
    "mini-swe-agent>=1.0",
    "litellm>=1.40",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
localguard = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
